ts연습 하기위해 설정 중

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,13 @@
     "compilerOptions": {
         "outDir": "./dist/",
         "sourceMap": true,
-        "noImplicitAny": true,
+        "noImplicitAny": false,
         "module": "commonjs",
-        "target": "es6",
+        "lib": ["es5", "es6", "dom"],
+        "target": "es5",
         "jsx": "react"
-    }
+    },
+    "include": [
+        "./src/**/*"
+    ]
 }
