--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,8 @@
         "outDir": "./dist/",
         "sourceMap": true,
         "noImplicitAny": false,
+        "declaration": true,
+        "esModuleInterop": true,
         "module": "commonjs",
         "lib": ["es5", "es6", "dom"],
         "target": "es5",
@@ -10,5 +12,8 @@
     },
     "include": [
         "./src/**/*"
+    ],
+    "exclude": [
+        "node_modules"
     ]
 }
