--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "html-webpack-inline-source-plugin": "0.0.10",
     "html-webpack-plugin": "^3.2.0",
     "source-map-loader": "^0.2.4",
+    "style-loader": "^1.0.0",
     "ts-loader": "^6.0.4",
     "typescript": "^3.5.2",
+    "typescript-plugin-css-modules": "^2.0.2",
     "webpack": "^4.35.2",
     "webpack-cli": "^3.3.5",
     "webpack-dev-middleware": "^3.7.0",
@@ -30,6 +32,7 @@
     "webpack-entry-plus": "^1.0.16"
   },
   "dependencies": {
+    "css-loader": "^3.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   }
